Changed Name of Site After Fork

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,9 @@
 ############################
 
 # Name of website
-title: My website
-
+title: DT Portfolio Site
 # Your name to show in the footer
-author: Some Person
+author: DThomas
 
 ###############################################
 # --- List of links in the navigation bar --- #
